<resources>
    <string name="app_name">Ramadan</string>

    <string name="sunDay">Sunday</string>
    <string name="monDay">Monday</string>
    <string name="tusDay">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="alfajr">Alfajr </string>
    <string name="dhuhr">Dhuhr</string>
    <string name="asr">Asr</string>
    <string name="maghrib">Maghrib</string>
    <string name="isha">Isha </string>
    <string name="ramadan_kareem">Ramadan Kareem</string>
    <string name="time_prayer">Time prayer</string>
    <string name="nextDay">Next Day</string>
    <string name="Suhoor_ime">Suhoor</string>
    <string name="day_details">Day Details</string>
</resources>