<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleX="1">


    <androidx.cardview.widget.CardView
        android:id="@+id/card1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/_16dp"
        app:cardBackgroundColor="#448AFF"
        app:cardCornerRadius="@dimen/_8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8dp">

            <TextView
                android:id="@+id/friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/friday"
                android:textColor="@color/white"
                android:textSize="@dimen/_24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_rawRes="@raw/ramadan" />


            <TextView
                android:id="@+id/time_dhuhr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="@string/Suhoor_ime"
                android:textColor="#FFAB40"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/friday"
                app:layout_constraintTop_toBottomOf="@+id/friday" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="@dimen/_32dp"
                android:layout_height="@dimen/_32dp"
                android:layout_marginStart="@dimen/_16sp"
                android:src="@drawable/sunrise"
                app:layout_constraintBottom_toBottomOf="@+id/time_dhuhr"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/time_dhuhr"
                app:layout_constraintTop_toTopOf="@+id/time_dhuhr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16dp"
                android:text="04:38 AM"
                android:textColor="#FEFEFE"
                android:textSize="@dimen/_14sp"
                app:layout_constraintStart_toStartOf="@+id/friday"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_8dp"
        app:cardBackgroundColor="#448AFF"
        app:cardCornerRadius="@dimen/_8dp"
        app:layout_constraintBottom_toBottomOf="@+id/card1"
        app:layout_constraintStart_toEndOf="@+id/card1"
        app:layout_constraintTop_toTopOf="@+id/card1">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_8dp">


            <TextView
                android:id="@+id/maghrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maghrib"
                android:textColor="#FFAB40"
                android:textSize="@dimen/_16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="@dimen/_8dp"
                android:src="@drawable/sea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/maghrib" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8dp"
                android:text="06:17 PM"
                android:textColor="#FEFEFE"
                android:textSize="@dimen/_14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>

